# green_fc

./: .gitignore  .vercelignore  COMMIT_AND_DEPLOY.md  DEBUG_500_ERROR.md  DEBUG_VERCEL.md  DEPLOY.md  DEPLOY_CHECKLIST.md  DEPLOY_QUICK.md  DEPLOY_STEP_BY_STEP.md  DEPLOY_UPDATE.md  FINAL_FIX_FRONTEND.md  FIREBASE_MIGRATION_GUIDE.md  FIREBASE_SETUP_QUICK.md  FIX_404_NOT_FOUND.md  FIX_ALEMBIC_CONNECTION_ERROR.md  FIX_API_404_DATABASE.md  FIX_API_404_FINAL.md  FIX_FRONTEND_DEPLOY.md  FIX_FRONTEND_ROUTING.md  FIX_FRONTEND_ROUTING_V2.md  FIX_MANGUM_CACHE.md  FIX_MULTIPLE_HEADS.md  FIX_NOT_FOUND_ERROR.md  FIX_PERMISSION_DENIED.md  FIX_POSTGRES_DIALECT.md  FIX_POSTGRES_DIALECT_V2.md  FIX_PYDANTIC_ERROR.md  FRONTEND_RUNNING.md  FRONTEND_SETUP.md  GIT_COMMIT_COMMANDS.sh  HOW_TO_CLEAR_VERCEL_CACHE.md  INSTALL_ALEMBIC.md  INSTALL_VERCEL_CLI.md  MIGRATE_FOR_VERCEL.md  MOVE_TO_PUBLIC.md  PROJECT_STATUS.md  QUICK_DEPLOY.sh  QUICK_MIGRATE_GUIDE.md  QUICK_START.md  QUICK_SUPABASE.md  (+33 more)
alembic/: env.py
alembic/versions/: 18bf88fe81ab_add_profile_image_and_multiple_.py  45d7992c5747_add_opponents_and_matches_tables.py  a62d12fbf547_initial_migration.py  add_is_completed_to_matches.py  add_match_goals_table.py  add_match_participants_table.py  add_rating_and_review_to_opponents.py  add_role_and_total_goals_to_players.py  make_player_team_id_nullable.py
api/: index.py
app/: config.py  database.py  main.py
app/models/: __init__.py  match.py  match_goal.py  (+4 more)
frontend/: README.md  api.js  app.js  index.html  start.sh  styles.css
public/: app.js  index.html  positions.js  styles.css
(+26 files in other folders)
