[project]
name = "green-fc"
version = "0.1.0"
description = "Lightweight football team management backend"
requires-python = ">=3.11"
authors = [
    { name = "Green FC Team", email = "team@greenfc.com" }
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "mangum==0.17.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

