[project]
name = "green-fc"
version = "0.1.0"
description = "Lightweight football team management backend"
requires-python = ">=3.11"
authors = [
    { name = "Green FC Team", email = "team@greenfc.com" }
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "mangum==0.17.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

